fix: header width and whitespace

--- a/assets/scss/partial/header.scss
+++ b/assets/scss/partial/header.scss
@@ -48,7 +48,6 @@
       line-height: 15px;
 
       a {
-        margin-right: 15px;
         color: $color-accent-1;
       }
       a:hover {
@@ -56,21 +55,19 @@
       }
       li {
         display: inline-block;
+        vertical-align: middle;
+      }
+      li:not(:last-child) {
         margin-right: 15px;
         border-right: 1px dotted;
         border-color: $color-accent-1;
-        vertical-align: middle;
+        margin-right: 15px;
+        a {
+          margin-right: 15px;
+        }
       }
       .icon {
         display: none;
-      }
-      li:last-child {
-        margin-right: 0;
-        border-right: 0;
-
-        a {
-          margin-right: 0;
-        }
       }
     }
   }
